Small wrapping fix for #843

--- a/dev/Styles/User/MessageList.less
+++ b/dev/Styles/User/MessageList.less
@@ -285,7 +285,7 @@ html:not(rl-mobile) {
 		border-radius: var(--border-radius, 5px);
 		border: 1px solid #ccc;
 		font-size: 11px;
-		padding: 0 2px;
+		padding: 0 4px;
 		white-space: nowrap;
 		&:hover {
 			background-color: rgba(127,127,127,0.3);
@@ -413,7 +413,7 @@ html:not(rl-mobile) {
 		}
 
 		.senderParent {
-			flex: 1 0 40%;
+			flex: 1 0 25%;
 		}
 
 		.subjectParent {
